typescript/checker/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            7,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:1:5
  |
1 | var str: string;
  |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            22,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:2:5
  |
2 | var bool: boolean;
  |     ^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:3:5
  |
3 | var num: number;
  |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            68,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:4:5
  |
4 | var strOrNum: string | number;
  |     ^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            106,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:5:5
  |
5 | var strOrNumOrBool: string | number | boolean;
  |     ^^^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            140,
        ),
        hi: BytePos(
            149,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardOfFormNotExpr.ts:6:5
  |
6 | var numOrBool: number | boolean;
  |     ^^^^^^^^^

